# inverter

./: .gitignore  README.md  cli.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sst.config.ts
apps/web/: package.json  remix.config.js  vite.config.ts
apps/web/app/: entry.server.tsx  root.tsx  upload-handler.server.ts
apps/web/app/components/dropzone/: dropzone.tsx  index.ts
apps/web/app/components/navbar/: navbar.module.css  navbar.tsx
apps/web/app/components/not-found/: not-found.tsx
apps/web/app/components/ui/: dropzone.tsx
apps/web/app/routes/: _index.tsx
src/inverter_cli/: __init__.py
stacks/: API.ts  Storage.ts  Web.ts
