[project]
name = "inverter-cli"
version = "1.0.0"
description = "CLI to invert colors in a PowerPoint presentation"
authors = [
    { name = "Joël Kuijper", email = "jmkuijper@outlook.com" }
]
dependencies = [
    "python_pptx>=1.0.2",
    "pillow>=10.4.0",
    "tqdm>=4.66.6",
    "rich>=13.9.4",
]
requires-python = ">= 3.8"

[dependency-groups]
dev = [
    "ruff>=0.7.2",
    "types-tqdm>=4.66.0.20240417",
]
